apps/vaultwarden/vaultwarden-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    konghq.com/protocols: "https"
    konghq.com/https-redirect-status-code: "301"
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - host: stargate.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
